# internal/adapter/controller/chat_controller.go
@@ -5,6 +5,7 @@ import (
 	"sample-go-server/internal/adapter/presenter"
 	"sample-go-server/internal/domain"
 	"sample-go-server/internal/usecase"
+	"time"
 )
 
 type chatCtrl struct {
@@ -14,10 +15,12 @@ type chatCtrl struct {
 
 type ChatController interface {
 	ListChatRooms() ([]api.ChatRoom, error)
+	GetMessages(roomID string) ([]api.ChatMessage, error)
+	SaveMessage(message api.ChatMessage) error
 }
 
-func NewChatController(pres presenter.ChatPresenter) ChatController {
-	uc := usecase.NewChatUsecase()
+func NewChatController(repo usecase.ChatRepository, pres presenter.ChatPresenter) ChatController {
+	uc := usecase.NewChatUsecase(repo)
 	return &chatCtrl{
 		usecase: uc,
 		pres:    pres,
@@ -30,4 +33,26 @@ func (c *chatCtrl) ListChatRooms() ([]api.ChatRoom, error) {
 		return nil, err
 	}
 	return c.pres.PresentChatRooms(Chats), nil
+}
+
+func (c *chatCtrl) GetMessages(roomID string) ([]api.ChatMessage, error) {
+	messages, err := c.usecase.GetMessages(roomID)
+	if err != nil {
+		return nil, err
+	}
+	return c.pres.PresentChatMessages(messages), nil
+}
+
+func (c *chatCtrl) SaveMessage(message api.ChatMessage) error {
+	draftMessage := domain.ChatMessage{
+		RoomId:    message.RoomId,
+		UserId:    message.UserId,
+		Message:   message.Message,
+		CreatedAt: time.Now(),
+	}
+	err := c.usecase.SaveMessage(draftMessage)
+	if err != nil {
+		return err
+	}
+	return nil
 }
